--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img src="./assets/github.png" alt="logo github">
                     GitHub
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/diego-ruan-d-866121124/">
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/diego-ruan">
                     <img src="./assets/linkedin.png" alt="logo linkedin">
                     Linkedin
                 </a>
